samples/_failures_safe/1761712985_467fd8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_675e69e5.c: In function ‘tokenize’:
./samples/SAFE/__tmp_675e69e5.c:159:14: error: expected ‘)’ at end of input
  159 |     if (lexer
      |        ~     ^
      |              )
./samples/SAFE/__tmp_675e69e5.c:159:5: error: expected declaration or statement at end of input
  159 |     if (lexer
      |     ^~
